Fixing Bug, Wrapping up of words on song light box

--- a/web/app/user/sass/components/_lightbox.scss
+++ b/web/app/user/sass/components/_lightbox.scss
@@ -161,6 +161,9 @@
 .creditCont {
     margin-top: 20px;
     color: #999;
+    width: 95%;
+    padding-left: 237px;
+    padding-right: 239px;
     .creditBox {
         display: inline-block;
         padding: 0 10px;
